--- a/hukusyu.html
+++ b/hukusyu.html
@@ -9,27 +9,27 @@
 <div>Select a mode</div>
 
 <div id="ej">
-<input type="button"class="square_btn" value="English to Japanese" style="WIDTH:200px;height:50px"
+<input type="button"class="square_btn" value="English to Japanese" style="WIDTH:230px;height:50px"
    onClick="document.getElementById('ej').style.display='none';
             document.getElementById('je').style.display='none';
             document.getElementById('ej_s').style.display='block'">
 </div>
 <div id="je">
-  <input type="button"class="square_btn" value="Japanese to English" style="WIDTH:200px;height:50px"
+  <input type="button"class="square_btn" value="Japanese to English" style="WIDTH:230px;height:50px"
      onClick="document.getElementById('je').style.display='none';
               document.getElementById('ej').style.display='none';
               document.getElementById('je_s').style.display='block'">
   </div>
 
-<div id="ej_s" style="display:none">
-<p><input type="button" class="push_btn" value="English to Japanese" style="WIDTH:200px;height:50px"
+<div id="ej_s" style="display:none" class="square_btn">
+<p><input type="button" class="push_btn" value="English to Japanese" style="WIDTH:230px;height:50px"
    onClick="window.location.reload();'"></p>
 <form method="post" action="tango_ej.php">
   <input type="submit" class="square_btn" value="START!">
 </form>
 </div>
-<div id="je_s" style="display:none">
-<p><input type="button" class="push_btn" value="English to Japanese" style="WIDTH:200px;height:50px"
+<div id="je_s" style="display:none" class="square_btn">
+<p><input type="button" class="push_btn" value="English to Japanese" style="WIDTH:230px;height:50px"
    onClick="window.location.reload();'"></p>
    <input type="hidden" name="lasteng" value=" ">
    <input type="hidden" name="lastjap" value=" ">
